--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,14 @@ nav {
     background-color: rgb(253, 253, 253);
 }
 
+/* Hero image */
+
+#hero-image {
+    /* height: 500px;
+    width: 100%;
+    background: url(../images/hero-placeholder.jpg) no-repeat center center; */
+}
+
 /* Footer */
 
 footer {
