--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,18 @@ nav {
 /* Hero image */
 
 #hero-image {
-    /* height: 500px;
+    height: 600px;
     width: 100%;
-    background: url(../images/hero-placeholder.jpg) no-repeat center center; */
+    background: url(../images/hero-placeholder.jpg) no-repeat center center;
+    background-size: 100%;
 }
+
+/* #hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+} */
+
 
 /* Footer */
 
