fix: bug not allowing youtube iframe to run

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,9 +128,9 @@ iframe {
     border: none;
 }
 
-.music-content {
+/* .music-content {
 
-}
+} */
 
 #youtube-iframe {
     background-color: red;
