--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,17 @@ body {
     background-color: #fafafa;
 }
 
+.page-heading {
+    padding-left: 4rem;
+    margin-top: 4rem;
+}
+
 /* Navigation bar -------*/
 
 nav {
     background-color: rgb(253, 253, 253);
 }
+
 
 /* Footer -------*/
 
@@ -124,22 +130,17 @@ a.btn.btn-primary.btn-lg:active {
 
 /* Music page --------*/
 
-iframe {
-    border: none;
+.music-content {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
 
-/* .music-content {
-
-} */
-
 #youtube-iframe {
-    background-color: red;
+    height: 400px;
+    width: 100%;
 }
 
 #soundcloud-iframe {
-    background-color: orange;
-}
-
-.bandcamp-link {
-    background-color: grey;
+    width: 100%;
+    height: 300px;
 }
