--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,3 +144,22 @@ a.btn.btn-primary.btn-lg:active {
     width: 100%;
     height: 300px;
 }
+
+/* Contact Page */
+
+#contact-info {
+    border: solid;
+    margin-top: 6rem;
+    max-width: 900px;
+    height: 450px
+}
+
+#email-form {
+    border: solid red;
+    background-color: rgba(60, 60, 60, 0.6);
+    margin-top: 2rem;
+    margin-bottom: 2.5rem;
+    max-width: 600px;
+    padding: 30px;
+    height: 250px;
+}
