--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,29 @@ nav {
     background-color: rgb(253, 253, 253);
 }
 
+#navigation-links {
+    position: relative;
+    left: 7%;
+}
+
+@media screen and (max-width: 953px) {
+
+    #navigation-links {
+        position: relative;
+        left: 3%;
+    }
+
+}
+
+@media screen and (max-width: 825px) {
+
+    #navigation-links {
+        position: relative;
+        left: 1%;
+    }
+
+}
+
 
 /* Footer -------*/
 
