--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ nav {
     left: 7%;
 }
 
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #D85656;
+}
+
 @media screen and (max-width: 953px) {
 
     #navigation-links {
