--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,11 @@ nav {
     color: #D85656;
 }
 
+button.navbar-toggler.ml-auto, button.navbar-toggler.ml-auto.collapsed {
+    border: none;
+    outline: none;
+}
+
 @media screen and (max-width: 953px) {
 
     #navigation-links {
