--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,9 +120,12 @@ ul#footer-social {
     text-align: center;
     height: 200px;
     margin-top: 1.5rem;
+    margin-bottom: 2rem;
     border: solid;
     border-radius: 30px;
     box-shadow: 4px 2px 4px #ccc;
+    background-color: #f2f0f0;
+
 }
 
 .cta-content {
