--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ ul#footer-social {
 /* Hero image*/
 
 #hero-image {
-    height: 750px;
+    height: 670px;
     width: 100%;
     background: url(../images/hero-placeholder.jpg) no-repeat center center;
     background-size: 100%;
@@ -161,12 +161,17 @@ h3#tour-header {
     font-size: 250%;
     text-decoration: underline;
     font-weight: 800;
+    position: relative;
+    left: 9%;
 }
 
-/* #tour-dates {
-    position: relative;
-    left: 14%;
-} */
+#tour-dates {
+    font-family: 'JetBrains Mono', monospace;
+}
+
+#tour-dates p {
+    font-size: 30px;
+}
 
 .venue {
     color: #D85656;
