--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ ul#footer-social {
     height: 200px;
     margin-top: 1.5rem;
     margin-bottom: 2rem;
-    border: solid;
+    border: solid #545454;
     border-radius: 30px;
     box-shadow: 4px 2px 4px #ccc;
     background-color: #f2f0f0;
