--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,28 @@ ul#footer-social {
     animation-fill-mode: forwards;
 }
 
+#hero-outer {
+    position: relative;
+}
+
+#cover-text, cover-text h3 {
+    color: #ffffff;
+}
+
+#cover-text {
+    font-size: 130%;
+    width: 300px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 100px;
+    right: 150px;
+    position: absolute;
+}
+
 /* animation learnt from https://www.youtube.com/watch?v=zHUpx90NerM&ab_channel=TraversyMedia at around 33 minutes */
 @keyframes hero-appear {
     0% {opacity: 0}
