--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,11 +99,6 @@ ul#footer-social {
     margin-top: 57px;
     margin-bottom: 45px;
     opacity: 0;
-
-    animation-name: hero-appear; 
-    animation-duration: 2s;
-    animation-delay: 0.75s;
-    animation-fill-mode: forwards;
 }
 
 #hero-outer {
@@ -128,12 +123,6 @@ ul#footer-social {
     position: absolute;
 }
 
-/* animation learnt from https://www.youtube.com/watch?v=zHUpx90NerM&ab_channel=TraversyMedia at around 33 minutes */
-@keyframes hero-appear {
-    0% {opacity: 0}
-    100% {opacity: 1}
-}
-
 /* Calls to action */
 
 .cta {
@@ -145,7 +134,6 @@ ul#footer-social {
     border-radius: 30px;
     box-shadow: 4px 2px 4px #ccc;
     background-color: #f2f0f0;
-
 }
 
 .cta-content {
@@ -174,12 +162,14 @@ a.btn.btn-primary.btn-lg:active {
 
 #cta-section {
     margin-bottom: 2.5rem;
+    opacity: 0;
 }
 
 /* Tour dates */
 
 h3#tour-header {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
+    padding-top: 2rem;
     font-size: 250%;
     text-decoration: underline;
     font-weight: 800;
@@ -204,6 +194,7 @@ h3#tour-header {
 .music-content {
     margin-top: 1rem;
     margin-bottom: 2rem;
+    opacity: 0;
 }
 
 #youtube-iframe {
@@ -253,6 +244,33 @@ h3#tour-header {
 #about-image {
     width: 70%;
     height: 16rem;
+}
+
+/* animations -------- */
+
+.appear-first {
+    animation-name: appear-first; 
+    animation-duration: 2s;
+    animation-delay: 0.75s;
+    animation-fill-mode: forwards;
+}
+
+/* animation learnt from https://www.youtube.com/watch?v=zHUpx90NerM&ab_channel=TraversyMedia at around 33 minutes */
+@keyframes appear-first {
+    0% {opacity: 0}
+    100% {opacity: 1}
+}
+
+.appear-second {
+    animation-name: appear-second; 
+    animation-duration: 2s;
+    animation-delay: 2.5s;
+    animation-fill-mode: forwards; 
+}
+
+@keyframes appear-second {
+    0% {opacity: 0}
+    100% {opacity: 1}
 }
 
 /* media queries ------- */
