--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #fafafa;
 }
 
-h2 {
+h1 {
     margin-top: 5rem;
     margin-left: 20%;
     padding-bottom: 1rem;
@@ -104,30 +104,12 @@ ul#footer-social {
     position: relative;
 }
 
-#cover-text, cover-text h3 {
-    color: #ffffff;
-}
-
-#cover-text {
-    font-size: 130%;
-    width: 300px;
-    height: 200px;
-    padding-top: 40px;
-    padding-left: 10px;
-
-    background-color: rgba(241, 109, 107, .7);
-
-    bottom: 100px;
-    right: 150px;
-    position: absolute;
-}
-
 /* Calls to action */
 
 .cta {
     text-align: center;
     height: 200px;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     margin-bottom: 2rem;
     border: solid #545454;
     border-radius: 30px;
@@ -212,21 +194,22 @@ h3#tour-header {
 
 /* contact.html -------*/
 
+section > h3 {
+    padding-top: 30px;
+    font-size: 200%;
+}
+
 #contact-info {
-    border: solid;
-    margin-top: 6rem;
-    max-width: 900px;
+    max-width: 800px;
     height: 450px
 }
 
 #email-form {
-    border: solid red;
-    background-color: rgba(60, 60, 60, 0.6);
     margin-top: 2rem;
     margin-bottom: 2.5rem;
-    max-width: 600px;
+    max-width: 550px;
     padding: 30px;
-    height: 250px;
+    height: 300px;
 }
 
 /* gallery.html -------*/
