--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,14 @@ h1 {
     text-decoration: underline;
 }
 
+h2 {
+    font-size: 175%;
+}
+
+h3 {
+    text-decoration: underline;
+}
+
 
 /* Navigation bar -------*/
 
@@ -112,7 +120,7 @@ ul#footer-social {
     margin-top: 1rem;
     margin-bottom: 2rem;
     border: solid #545454;
-    border-radius: 30px;
+    border-radius: 45px;
     box-shadow: 4px 2px 4px #ccc;
     background-color: #f2f0f0;
 }
@@ -194,22 +202,36 @@ h3#tour-header {
 
 /* contact.html -------*/
 
-section > h3 {
-    padding-top: 30px;
-    font-size: 200%;
+label {
+    font-size: 125%;
+    padding-top: 5px;
 }
 
-#contact-info {
+form > h3 {
+    font-size: 150%;
+    padding-bottom: 10px;
+    font-family: 'JetBrains Mono', monospace;
+}
+
+h3 ~ p {
+    font-size: 170%;
+}
+
+#contact-info-outer {
     max-width: 800px;
-    height: 450px
+    height: 400px;
+}
+
+#contact-info-content {
+    padding-top: 20px;
 }
 
 #email-form {
     margin-top: 2rem;
     margin-bottom: 2.5rem;
-    max-width: 550px;
+    max-width: 500px;
     padding: 30px;
-    height: 300px;
+    height: 350px;
 }
 
 /* gallery.html -------*/
