style: music section on index.html with paddin and add hr to break page up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,12 @@ a.btn.btn-primary.btn-lg:active {
     margin-bottom: 2.5rem;
 }
 
+/* youtube vid on index.html */
+
+#index-music {
+    padding: 20px;
+}
+
 /* Tour dates */
 
 h3#tour-header {
