--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,16 +242,17 @@ h3 ~ p {
 
 /* gallery.html -------*/
 
-#photo {
-    clear: both;
-    line-height: 0;
-    column-count: 4;
-    column-gap: 0px;
+.photo > img {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 16px;
 }
 
-#photo img {
-    width: 100%;
-}
+.photo {
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+} 
 
 /* about.html -------*/
 
