add: background image to music page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,14 @@ h3 {
     text-decoration: underline;
 }
 
+/* .hero-bg {
+    background-image: url(../images/hero-image-min.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+} */
+
 
 /* Navigation bar -------*/
 
