--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ ul#footer-social {
     margin-top: 1rem;
     margin-bottom: 2rem;
     border: solid #686868;
-    border-radius: 45px;
+    border-radius: 20px;
     box-shadow: 4px 2px 4px #ccc;
     background-color: #f2f0f0;
 }
@@ -275,8 +275,13 @@ button#email-button {
 
 /* gallery.html -------*/
 
-.photo > img {
-    padding: 15px 0 15px 0;
+img {
+    box-shadow: 4px 2px 4px #ccc;
+    border-radius: 16px;
+}
+
+.photo {
+    padding: 15px;
 }
 
 /* about.html -------*/
