--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ h1 {
     padding-bottom: 1rem;
     font-size: 3.5rem;
     text-decoration: underline;
-    /* color: #D85656 */
 }
 
 h2 {
@@ -25,10 +24,14 @@ h2 {
     
 }
 
+.alt-font {
+    font-family: 'JetBrains Mono', monospace;
+}
+
 /* Navigation bar -------*/
 
 nav {
-    background-color: rgb(253, 253, 253);
+    background-color: rgba(253, 253, 253, 0.9);
     font-size: 117%;
 }
 
@@ -37,9 +40,10 @@ nav {
     left: 11%;
 }
 
-.navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:hover, a:hover {
     color: #D85656;
     transition: 0.5s;
+    text-decoration: none;
 }
 
 .navbar-light .navbar-nav .nav-link:active {
@@ -150,13 +154,25 @@ a.btn.btn-primary.btn-lg:active {
 
 /* youtube vid on index.html */
 
-#index-music {
-    padding: 20px;
+h5 > a {
+    color: rgba(0, 0, 0, 0.5);
 }
+
+#index-music {
+    padding: 0 20px 20px 20px;
+}
+
+.music-alert {
+    margin-top: 30px;
+}
+
+/* .music-alert {
+    width: 100%;
+} */
 
 /* Tour dates */
 
-h3#tour-header {
+h3.index-header {
     margin-bottom: 2rem;
     padding-top: 2rem;
     font-size: 250%;
@@ -164,10 +180,6 @@ h3#tour-header {
     font-weight: 800;
     position: relative;
     left: 9%;
-}
-
-#tour-dates {
-    font-family: 'JetBrains Mono', monospace;
 }
 
 #tour-dates p {
@@ -192,17 +204,17 @@ h3#tour-header {
     margin-bottom: 2rem;
 }
 
+.youtube-iframe {
+    height: 400px;
+    width: 100%;
+}
+
 #soundcloud-logo {
     color: #ff7700;
 }
 
 #youtube-logo {
     color: #c4302b;
-}
-
-#youtube-iframe {
-    height: 400px;
-    width: 100%;
 }
 
 #soundcloud-iframe {
@@ -237,7 +249,6 @@ label {
 form > h3 {
     font-size: 125%;
     padding-bottom: 10px;
-    font-family: 'JetBrains Mono', monospace;
     text-decoration: none;
 }
 
@@ -354,16 +365,17 @@ button#email-button {
 }
 
 @media screen and (max-width: 992px) {
-    .dissapear {
+    .disappear {
         display: none;
     }
 }
 
 @media screen and (min-width: 992px) {
+    
     .background-image {
-        background-image: url("../images/littleparadisesign.jpg");
+        background-image: url("../images/littleparadise-fran.jpg");
         background-position: center;
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
     }
